tests/baselines/reference/decoratorOnFunctionExpression.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnFunctionExpression.ts(3,9): error TS1109: Expression expected.
tests/cases/conformance/decorators/invalid/decoratorOnFunctionExpression.ts(3,23): error TS1003: Identifier expected.


==== tests/cases/conformance/decorators/invalid/decoratorOnFunctionExpression.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    var F = @dec function () {
            ~
!!! error TS1109: Expression expected.
                          ~
!!! error TS1003: Identifier expected.
    }